static/stylesheets/main.css
/* ... */
td.resume-contact {
  border: 0px !important;
  border-collapse: collapse !important;
  border:none !important;
  outline:none !important;
  font-size: 1em;
}

table.small, th, td {
  border: 1px solid black;
  border-collapse: collapse;
  text-align: center;
  width: 10%;
  margin: auto;
}

table.medium {
  width: 15%; 
  margin: auto;
}

table.medium-large {
  width: 60%; 
  margin: auto;
}

table.large {
  width: 80%; 
  margin: auto;
}

table.extra-large {
  width: 95%; 
  margin: auto;
}

p.table {
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  font-weight: 300;
  text-align: center;
  vertical-align: center;
  padding-top: 5px;
  padding-bottom: 5px;
  width: 60%;
  margin: auto;
  }

/* Style the header with a green background and some padding */
div.header {
display: inline-block;
overflow: hidden;
background-color: #1ADB7E;
padding: 20px 10px;
width: 100%;
}

/* Style the header links */
div.header a {
display: inline-flex;
padding: 5px;
color: black;
font-family: 'Red Hat Text', sans-serif;
font-size: 100%;
font-weight: 500;
line-height: 10%;
}

/* Change the background color on mouse-over */
div.header a:hover {
color: #FFFFFF;
}

/* Float the link section to the right */
div.header-right {
float: right;
}

footer {
width: 100%;
display: inline-block;
margin: 2em 0;
height: 70px;
background-color: #1ADB7E;
}
footer .copyright {
width: 50%;
float: left;
}

footer .copyright p {
padding-left: 10%;
background-color: #1ADB7E;
color: #000000;
font-size: 0.7em;
line-height: 70px;
text-transform: capitalize;
letter-spacing: 1px;
}

footer .social {
width: 50%;
float: right;
}

footer .social a {
float: left;
line-height: 70px;
text-decoration: none;
color: white;
text-align: center;
font-weight: bold;
-moz-transition: all, 0.3s;
-o-transition: all, 0.3s;
-webkit-transition: all, 0.3s;
transition: all, 0.3s;
}

footer .social a:hover {
background-color:#999;
-moz-transition: all, 0.3s;
-o-transition: all, 0.3s;
-webkit-transition: all, 0.3s;
transition: all, 0.3s;
}

a.linked {
background-color: #1e83ae;
font-size: 1.2em;
width: 20%;
}

a.git {
background-color: #FFFFFF;
font-size: 0.3em;
width: 20%;
}

a.tweet {
background-color: #3dacdd;
font-size: 1.2em;
width: 20%;
}

a.contact {
background-color: #abafad;
font-size: 0.8em;
width: 20%;
}

span {
  content: "\u0024";
}

img.project-button {
  width:375px;
  height:250px;
  border-radius: 5%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@media screen and (max-width: 600px) {
  .header a {
    float: none;
    padding: 1px;
    display:inline;
    text-align: center;
    background-color: #1ADB7E;
  }

  .header-right {
    float: right;
    text-align: right;
  }

  .float-container {
    padding: 10px;
    width: 98%;
    margin: auto;
  }

  .center-image {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
  }
  
  .center-image-small {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 28%;
  }
  
  .center-image-medium {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
  }
  
  .center-image-large {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
  }
  
  .center-image-xlarge {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
  }

  h1.resume {
    background-color: white;
    color: #000000;
    font-family: 'Red Hat Text', sans-serif;
    font-size: 1.5em;
    font-weight: 500;
    text-align: center;
    margin : 0;
    padding-bottom: 0;
    padding-left: 15%;
    padding-right: 15%;
  }

  h2.notes {
    color: #000000;
    font-family: 'Red Hat Text', sans-serif;
    font-size: 175%;
    font-weight: 500;
    text-align: center;
    padding-top: 1px;
    padding-bottom: 1px;
  }

  p.notes {
    background-color: white;
    color: #000000;
    font-family: 'Red Hat Text', sans-serif;
    font-size: 100%;
    font-weight: 300;
    text-align: left;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 80%;
    margin: auto;
    }

  p.projects {
    background-color: white;
    color: #000000;
    font-family: 'Red Hat Text', sans-serif;
    font-size: 100%;
    font-weight: 300;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 95%;
    }

  p.large-table {
    font-size: .8em;
    }

  .float-container {
    padding: 10px;
    width: 95%;
    margin: auto;
    font-size: 80%;
    }

  .equation-container {
    font-size: 80%;
    width: 95%;
    margin: auto;
    }

  .note-container {
    padding: 10px;
    width: 95%;
    margin: auto;
    }

  table.small {
    width: 35%; 
    margin: auto;
  }
    
  table.medium {
    width: 50%; 
    margin: auto;
  }

  table.medium-large {
    width: 90%; 
    margin: auto;
    border-spacing: 0;
    border-collapse: collapse;
  }

  table.large {
    width: 80%; 
    margin: auto;
  }

  code {
    color: #000000;
    font-size: 80%;
    background-color: #eee;
    border: 1px solid #999;
    display: block;
    padding: 5px;
    width: 95%;
    margin: auto;
  }

  img.project-button {
    width:10em;
    height:5em;
    border-radius: 5%;
  }

  footer .copyright {
    width: 90%;
  }
  footer .copyright p {
    text-align: center;
    padding: 0;
  }
  footer .social {
    width: 100%;
  }

